--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@ayanthedev/colorlogs",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A colorful logger for your console",
   "main": "build/index.js",
   "scripts": {
-  	"prepublish": "npm run build",
+    "prepublish": "npm run build",
     "build": "tsc -b",
     "test": "node test/test"
   },
@@ -20,7 +20,8 @@
   "author": "ayanthedev",
   "license": "MIT",
   "dependencies": {
-    "colorette": "^1.2.1"
+    "colorette": "^1.2.1",
+    "dayjs": "^1.10.4"
   },
   "devDependencies": {
     "typescript": "^4.1.3"
