--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@ayanthedev/colorlogs",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "A colorful logger for your console",
   "main": "build/index.js",
   "scripts": {
-    "prepublish": "npm run build && rm -rf",
+    "prepublish": "npm run build && rm -rf src",
     "build": "tsc -b"
   },
   "repository": {
